--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-
+/assets/images
 /public/packs
 /public/packs-test
 /node_modules
