--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-/assets/images
 /public/packs
 /public/packs-test
 /node_modules
@@ -35,3 +34,4 @@
 yarn-debug.log*
 .yarn-integrity
 .DS_Store
+app/assets/images/icon.png
